<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_common"
    android:orientation="vertical"
    >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <EditText
                    android:id="@+id/suggestEt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@null"
                    android:gravity="top|left"
                    android:hint="@string/setting_v_content"
                    android:padding="20dp"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/countNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="20dp"
                    android:text="@string/setting_v_count"
                    android:textColor="#333333"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="20dp">

                    <android.support.v7.widget.RecyclerView

                        android:id="@+id/rv_image_pick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white">


                <TextView
                    android:id="@+id/pTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/setting_v_teltitle"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/phoneEv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/pTv"
                    android:background="@null"
                    android:hint="@string/setting_v_tel"
                    android:inputType="number"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center"
                    android:id="@+id/sendBtn"
                    android:layout_centerInParent="true"
                    android:text="@string/tijiaostr"
                    android:textColor="@color/white"
                    android:background="@drawable/selector_loginout_btn"
                    android:layout_width="211dp"
                    android:layout_height="32dp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
