<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">



    <!--    <include layout="@layout/toolbar" />-->



            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:src="@mipmap/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="26sp"
                    android:text="@string/main_name"
                    android:textColor="@color/white" />

            </LinearLayout>


          <!--  <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8" />-->

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="vertical">
                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:layout_marginBottom="@dimen/margintop"
                    android:background="@drawable/selector_same_et"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/login_user"
                        android:layout_width="16dp"
                        android:layout_height="16dp" />
                    <EditText
                        android:id="@+id/usernameEt"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/hintstr"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/textsizeloginuser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="bozhou"
                        android:textColor="@color/white"

                        android:background="@null"
                        />
                    <!--ZYSYWZXGCXJ1-->
                </LinearLayout>

                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margintop"
                    android:layout_marginBottom="@dimen/margintop"
                    android:background="@drawable/selector_same_et"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/login_ps"
                        android:layout_width="16dp"
                        android:layout_height="16dp" />
                    <EditText
                        android:id="@+id/psEt"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/hintps"
                        android:text="123456"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:inputType="textPassword"
                        android:textSize="@dimen/textsizeloginuser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        />
                <!--123456-->
                </LinearLayout>

                <TextView
                    android:id="@+id/bt_login"
                    android:gravity="center"
                    style="@style/commen_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="@dimen/margintop"
                    android:textSize="18sp"
                    android:letterSpacing="0.5"
                    android:text="@string/text_login_bt_tip" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2" >

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/design_company_name"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center|bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>



</LinearLayout>